feat: Comment model created

--- a/views/users/profile-show.pug
+++ b/views/users/profile-show.pug
@@ -20,7 +20,7 @@ block content
                     p= tweets.length
                 .user-profile-data-followers 
                     p Followers 
-                    p user.followers.length
+                    p=user.followers.length
                 .user-profile-data-following 
                     p=Following 
                     p=user.followings.length
