feat: commenter les tweet

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,16 +121,49 @@ a:hover {
   }
 }
 .profile-actions {
-  margin-left: 3rem;
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  flex-wrap: wrap;
+}
+@media (min-width: 576px) {
+  .profile-actions {
+    width: 60%;
+  }
 }
 @media (min-width: 768px) {
   .profile-actions {
-    margin-left: 25rem;
+    width: 70%;
   }
 }
 @media (min-width: 992px) {
   .profile-actions {
     margin: 2rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
+.profile-actions i {
+  font-size: 1.5rem;
+  color: white;
+  margin-left: 1.5rem;
+}
+.profile-actions i:hover {
+  cursor: pointer;
+}
+@media (min-width: 992px) {
+  .profile-actions i:hover {
+    color: wheat !important;
+  }
+}
+@media (min-width: 992px) {
+  .profile-actions i {
+    color: #00ACEE;
   }
 }
 .profile-data {
