--- a/views/includes/tweet-card.pug
+++ b/views/includes/tweet-card.pug
@@ -14,7 +14,9 @@
             
 
     .tweet-card-body= tweet.content
-    .tweet-card-actions 
-        i.fa-regular.fa-comment 
+    .tweet-card-actions
+        a(href=`/tweet/${tweet._id}`) 
+            i.fa-comment(class= tweet.comments.length > 0 ? 'fa-solid': 'fa-regular' )
+            span= tweet.comments.length
         i.fa-regular.fa-heart
         i.fa-regular.fa-share-from-square
