feat: corriger des problems de connexion

--- a/views/includes/profile.pug
+++ b/views/includes/profile.pug
@@ -12,19 +12,15 @@ if isAuthenticated
                 img#profile-image(src=currentUser.avatar, alt="")
         .profile-info
             h3 @#{currentUser.username}
-            p #{currentUser.firstname} #{currentUser.lastname}
+            p #{currentUser.fullname}
+            p A rejoint twitter en #{currentUser.createdAt.toLocaleString('fr', {month: 'long'})} #{currentUser.createdAt.getFullYear()}
         .profile-data 
-            .profile-data-posts
-                p Posts
-                p 5
-            .profile-data-followers 
-                p Followers 
-                p= currentUser.followers.length
-            .profile-data-following 
-                p Following 
-                p= currentUser.following.length
-            .profile-actions
-                fa-solid.fa-users
-                fa-solid.fa-message    
-                a(href="/auth/signout")
-                    i.fa-solid.fa-right-from-bracket
+        .profile-actions 
+            i.fa-solid.fa-users
+                span= currentUser.followers.length
+            i.fa-solid.fa-user-plus
+                span= currentUser.followings.length
+            i.fa-regular.fa-message 
+                span 5
+            a(href="/auth/signout")
+                i.fa-solid.fa-arrow-right-from-bracket
