--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,7 +121,7 @@ a:hover {
   }
 }
 .profile-actions {
-  width: 50%;
+  width: 54%;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -152,18 +152,38 @@ a:hover {
   font-size: 1.5rem;
   color: white;
   margin-left: 1.5rem;
-}
-.profile-actions i:hover {
-  cursor: pointer;
-}
-@media (min-width: 992px) {
-  .profile-actions i:hover {
-    color: wheat !important;
-  }
+  position: relative;
 }
 @media (min-width: 992px) {
   .profile-actions i {
     color: #00ACEE;
+    margin-bottom: 1rem;
+    margin-left: 0;
+  }
+}
+.profile-actions i:hover {
+  cursor: pointer;
+  color: white !important;
+}
+@media (min-width: 992px) {
+  .profile-actions i:hover {
+    color: #00ACEE !important;
+  }
+}
+.profile-actions i span {
+  font-weight: 600;
+  display: block;
+  width: 20px;
+  height: 20px;
+  line-height: 5px;
+  font-size: 1rem;
+  padding: 0.5rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+@media (min-width: 992px) {
+  .profile-actions i span {
+    display: inline-block;
   }
 }
 .profile-data {
@@ -171,6 +191,7 @@ a:hover {
 }
 @media (min-width: 992px) {
   .profile-data {
+    margin-top: 2rem;
     display: block;
     display: flex;
     flex-direction: column;
@@ -319,6 +340,10 @@ a:hover {
   align-items: center;
   flex-wrap: wrap;
 }
+.tweet-card-actions i:hover {
+  cursor: pointer;
+  color: #00ACEE;
+}
 
 .form-new {
   width: 100%;
@@ -415,6 +440,10 @@ a:hover {
 }
 .search-bar #search-menu-container .search-menu-result .search-user span {
   margin-left: 1rem;
+}
+
+.tweets-list-container {
+  width: 100%;
 }
 
 .content-box {
