--- a/sass/layout/_profile.scss
+++ b/sass/layout/_profile.scss
@@ -51,46 +51,71 @@
     }
 
     &-actions {
-        // margin-left: 9rem;
-        width: 50%;
+        width: 54%;
 
         @include flex($justify: flex-end);
 
         @include sm {
-            width:60%;
+            width: 60%;
         }
 
         @include md {
-            width:70%;
+            width: 70%;
         }
 
         @include lg {
             margin: 2rem 0;
             @include flex($direction: column)
         }
- 
-            i {
-                font-size: 1.5rem;
-                color: white;
-                margin-left: 1.5rem;
-    
-                &:hover {
-                    cursor: pointer;
-                    @include lg {
-                        color: wheat !important;
-                    }
-                }
+
+        i {
+            font-size: 1.5rem;
+            color: white;
+            margin-left: 1.5rem;
+            position: relative;
+
+            @include lg {
+                color: $primary-color;
+                margin-bottom: 1rem;
+                margin-left: 0;
+            }
+
+            &:hover {
+                cursor: pointer;
+                color: white !important;
 
                 @include lg {
-                    color: $primary-color;
+                    color: $primary-color !important;
                 }
             }
+
+            span {
+
+                font-weight: 600;
+                display: block;
+                width: 20px;
+                height: 20px;
+                line-height: 5px;
+                font-size: 1rem;
+                padding: .5rem;
+                border-radius: 50%;
+                margin-right: 1rem;
+
+                @include lg {
+                    display: inline-block;
+                }
+            }
+
+
+
+        }
     }
 
     &-data {
         display: none;
 
         @include lg {
+            margin-top: 2rem;
             display: block;
             @include flex($direction: column)
         }
