--- a/views/includes/tweet-card.pug
+++ b/views/includes/tweet-card.pug
@@ -4,6 +4,7 @@
             img(src=tweet.author.avatar, alt="")
             a(href=`/user/${tweet.author.username}`)
                 p @#{tweet.author.username}
+            p= moment(tweet.createdAt).locale('fr').fromNow()
         if currentUser 
             if tweet.author._id.toString() === currentUser._id.toString()
                 .tweet-card-author-actions 
@@ -16,7 +17,8 @@
     .tweet-card-body= tweet.content
     .tweet-card-actions
         a(href=`/tweet/${tweet._id}`) 
-            i.fa-comment(class= tweet.comments.length > 0 ? 'fa-solid': 'fa-regular' )
+            i.fa-comment(class= tweet.comments.length > 0 ? 'fa-solid': 'fa-regular')
             span= tweet.comments.length
-        i.fa-regular.fa-heart
+        i.fa-heart(class= tweet.nbLikes > 0 ? 'fa-solid' : 'fa-regular' tweetid = tweet._id) 
+            span= tweet.nbLikes
         i.fa-regular.fa-share-from-square
