--- a/views/users/profile-show.pug
+++ b/views/users/profile-show.pug
@@ -8,22 +8,23 @@ block content
             .user-profile-info
                 h3 @#{user.username}
                 p #{user.firstname} #{user.lastname}
-            if currentUser._id.toString() !== user._id.toString() 
+            if currentUser._id.toString() !== user._id.toString()
                 .user-profile-actions 
-                    if currnetUser.followings.includes(user._id.toString())   
-                        a(href=`/user/unfollow/${user._id}` class="btn btn-primary") Unfollow
-                    else
+                    if currentUser.followings.includes(user._id.toString())
+                        a(href=`/user/unfollow/${user._id}` class="btn btn-primary") unFollow
+                    else 
                         a(href=`/user/follow/${user._id}` class="btn btn-primary") Follow
+                
             .user-profile-data 
                 .user-profile-data-posts
                     p Posts
                     p= tweets.length
                 .user-profile-data-followers 
                     p Followers 
-                    p=user.followers.length
+                    p= user.followers.length
                 .user-profile-data-following 
-                    p=Following 
-                    p=user.followings.length
+                    p Following 
+                    p= user.followings.length
 
     .tweets-user-container
         .tweets-user-list 
